--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script src="https://kit.fontawesome.com/f3f5623f26.js" crossorigin="anonymous"></script>
   <app-root></app-root>
 </body>
 </html>
